Fix for responsive detail view on tablet view.

--- a/themes/SuiteR/css/style.css
+++ b/themes/SuiteR/css/style.css
@@ -3841,13 +3841,14 @@ li.moremenu {
         border: none;
     }
 
-    .detail td, .edit td {
+    .detail td, #DEFAULT td {
         display: inline-block;
         border: none;
         margin: 0 5px 0 25px;
         padding:0;
-        max-width:33%;
         font-size:1em;
+        width:auto;
+        min-width:35%;
     }
 }
 
